# spaaace

./: Cargo.toml  readme.md  ui_elements.afdesign
assets/shaders/: forcefield.wgsl
client/: Cargo.toml
client/assets/shaders/: cubemap_unlit.wgsl  forcefield.wgsl
client/src/: app.rs  game_state.rs  lib.rs  main.rs  resources.rs  utils.rs
client/src/asteroid/: mod.rs
client/src/camera/: mod.rs
client/src/capture_point/: capture_point.rs  mod.rs
client/src/controls/: mod.rs
client/src/debug/: fps.rs
client/src/networking/: events.rs  init.rs  input.rs  mod.rs  sync.rs  tick.rs
client/src/particles/: mod.rs
client/src/player/: mod.rs
client/src/ship_editor/: editor.rs  events.rs  mod.rs
client/src/skybox/: cubemap.rs  mod.rs
client/src/systems/: init.rs  sync.rs
client/src/ui/: mod.rs
client/src/weapons/: mod.rs
server/: Cargo.toml  TestDest  readme.md
server/assets/: .readme
server/src/: main.rs  resources.rs
server/src/asteroid/: mod.rs
server/src/bullet/: mod.rs
server/src/capture_point/: capture_point.rs  mod.rs
server/src/networking/: events.rs  init.rs  tick.rs
server/src/player/: mod.rs
server/src/projectiles/: mod.rs
server/src/weapons/: bullet.rs  mod.rs
shared/: Cargo.toml
shared/assets/missiles/: defaultss.ron  missile.ron  missile2.ron
shared/assets/ships/test_ship/: test_ship.gltf
shared/assets/turrets/turret_large/: turret_large.gltf
shared/src/: lib.rs  protocol.rs  shared.rs
shared/src/asteroid/: mod.rs
shared/src/behavior/: process_command.rs
shared/src/cooldown/: mod.rs
shared/src/health/: mod.rs
shared/src/lifetime/: mod.rs
shared/src/missile/: mod.rs
shared/src/player/: mod.rs  player_input.rs
shared/src/projectiles/: mod.rs
shared/src/protocol/: key_command.rs  position.rs
shared/src/ships/: mod.rs
shared/src/targeting/: mod.rs
shared/src/team/: team_enum.rs
shared/src/turret/: bullet.rs  mod.rs  model_load_handlers.rs
shared/src/util/: mod.rs  spring.rs
shared/src/weapons/: bullet.rs  events.rs  missile.rs  mod.rs
src/: main.rs
src/capture_point/: capture_point.rs  mod.rs
src/client/: events.rs  global.rs  init.rs  input.rs  mod.rs  resources.rs  sync.rs  tick.rs
src/networking/: channels.rs  mod.rs  protocol.rs  shared.rs
src/networking/behavior/: process_command.rs
src/networking/protocol/: auth.rs  entity_assignment.rs  key_command.rs  network_position.rs
src/player/: mod.rs  player.rs
src/projectile/: mod.rs  projectile.rs
src/server/: events.rs  init.rs  mod.rs  resources.rs  tick.rs
src/ship/: mod.rs  space_ship.rs
src/team/: mod.rs
