[package]
name = "spaaaace"
version = "0.1.0"
authors = []
workspace = "../"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "app"
path = "src/main.rs"


[[bin]]
name = "ship_editor"
path = "src/ship_editor/mod.rs"

[lib]
name = "app"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]

[dependencies]
spaaaace_shared = { path = "../shared" }
bevy = { version = "0.9", features=["jpeg"] }
cfg-if = { version = "1.0" }
bevy-inspector-egui = "0.17.0"
bevy_renet = "0.0.6"
bincode = "1.3.3"
bevy_hanabi = "0.5.1"
rand = "0.8.5"
bevy_egui = "0.19.0"
rfd = "0.10.0"
bevy_mod_picking = "0.11.0"
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }
