[package]
name = "spaaaace"
version = "0.1.0"
authors = []
workspace = "../"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "spaaaace"
path = "src/main.rs"

[lib]
name = "app"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]

[dependencies]
spaaaace_shared = { path = "../shared" }
bevy = { version = "0.10", features=["jpeg"] }
cfg-if = { version = "1.0" }
bevy-inspector-egui = "0.18.1"
bevy_renet = "0.0.7"
bincode = "1.3.3"
bevy_hanabi = "0.6.1"
rand = "0.8.5"
bevy_egui = "0.20.2"
bevy_mod_gizmos = "0.4.0"
image = "0.24.5"
bevy-scene-hook = "6.0.0"
bevy_rapier3d = "0.21.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }
