[package]
name = "spaaaace_server"
version = "0.1.0"
authors = []
workspace = "../"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
spaaaace_shared = { path = "../shared" }
bevy = { version = "0.9" }
bevy_renet = "0.0.6"
serde = "1.0.151"
bincode = "1.3.3"
bevy_mod_gizmos = "0.2.0"
bevy_rapier3d = "0.19.0"
bevy-inspector-egui = "0.15.0"

[profile.dev.package."*"]
opt-level = 3