[package]
name = "spaaaace_server"
version = "0.1.0"
authors = []
workspace = "../"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
spaaaace_shared = { path = "../shared" }
bevy = { version = "0.9", features=["jpeg"] }
bevy_renet = "0.0.6"
serde = "1.0.151"
bincode = "1.3.3"
bevy_mod_gizmos = "0.3.1"
bevy_rapier3d = "0.20.0"
bevy-inspector-egui = "0.17.0"
rand = "0.8.5"
