[package]
name = "spaaaace_server"
version = "0.1.0"
authors = []
workspace = "../"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
spaaaace_shared = { path = "../shared" }
bevy = { version = "0.10", features = ["jpeg"] }
bevy_renet = "0.0.7"
serde = "1.0.151"
bincode = "1.3.3"
bevy_mod_gizmos = "0.4.0"
bevy_rapier3d = "0.21.0"
bevy-inspector-egui = "0.18.1"
rand = "0.8.5"
