[package]
name = "spaaaace_shared"
version = "0.1.0"
authors = []
workspace = "../"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[features]

[dependencies]
bevy = { version = "0.10", features = ["jpeg"] }
cfg-if = { version = "1.0" }
log = { version = "0.4" }
phf = { version = "0.11", default-features = false, features = ["macros"] }
rand = "0.8.5"
serde = "1.0.151"
bevy_rapier3d = "0.21.0"
bevy_renet = "0.0.7"
bevy_mod_gizmos = "0.4.0"
bincode = "1.3.3"
bevy_common_assets = { version = "0.6", features = ["ron"] }
